change form to wizard and add translations

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -7,7 +7,7 @@
       "NAV_QUOTE": "Get a Quote",
       "NAV_CONTACT": "Contact Us",
       "TRANSPORT_SAFE": "Safe and Professional Vehicle Transportation",
-      "SUBTITLE": "Get your vehicle transported in minutes",
+      "SUBTITLE": "Get a quote for your vehicle transfer in minutes",
       "BUTTON_CONTACT": "Contact Us",
       "MAIN_TITLE": "Deluxe Move Broker LLC",
       "MAIN_SUBTITLE": "Over 10 years of experience transporting vehicles with the highest quality standards in the U.S.",
@@ -28,7 +28,7 @@
       "OPEN_TITLE": "Open Trailers",
       "OPEN_DESC": "Transport all kinds of vehicles with the best open and secure equipment.",
       "LOCAL_TITLE": "Local Transport & Storage",
-      "LOCAL_DESC": "Pickup and delivery guaranteed in Concord, North Carolina & secure and affordable storage.",
+      "LOCAL_DESC": "Pickup and delivery guaranteed in Concord, North Carolina & secure and affordable storage. Forklift service available",
       "BOOK_NOW": "Book Now"
     },
     "QUOTE_FORM": {
@@ -36,16 +36,38 @@
       "NAME_LABEL": "Full Name",
       "EMAIL_LABEL": "Email Address",
       "PHONE_LABEL": "Phone Number",
-      "FROM_LABEL": "Origin",
-      "FROM_PLACEHOLDER": "Enter origin location",
-      "TO_LABEL": "Destination",
-      "TO_PLACEHOLDER": "Enter destination location",
-      "ENCLOSED_LABEL": "Need enclosed transport?",
+      "FROM_LABEL": "Transport vehicle from",
+      "FROM_PLACEHOLDER": "Zip Code or City",
+      "TO_LABEL": "Transport vehicle to",
+      "TO_PLACEHOLDER": "Zip Code or City",
+      "ENCLOSED_LABEL": "Do you need enclosed transport?",
       "DATE_LABEL": "Estimated Date",
       "PREFERRED_CONTACT_LABEL": "How would you like to receive the quote?",
       "PREFERRED_CONTACT_PLACEHOLDER": "Select one or more options",
       "DESCRIPTION_LABEL": "Additional Comments",
-      "SUBMIT_BUTTON": "Submit Quote"
+      "SUBMIT_BUTTON": "Submit Quote",
+      "VEHICLE": "Vehicle",
+      "DESTINATION": "Destination",
+      "CONTACT_DETAILS": "Contact Details",
+      "NEXT": "Next",
+      "PREVIOUS": "Previous",
+      "YES": "Yes",
+      "NO": "No",
+      "IS_OPERABLE": "Is it operable?",
+      "VEHICLE_YEAR": "Vehicle Year",
+      "VEHICLE_MAKE": "Vehicle Make",
+      "VEHICLE_MODEL": "Vehicle Model",
+      "TRANSPORT_TYPE": "Transport Type",
+      "TRANSPORT_TYPE_PLACEHOLDER": "Select transport type",
+      "OTHER": "Other",
+      "OTHER_MAKE_LABEL": "Select make",
+      "OTHER_MODEL_LABEL": "Select model",
+      "SELECT_MAKE": "Select make",
+      "OTHER_MAKE_PLACEHOLDER": "Select make",
+      "OTHER_MODEL_PLACEHOLDER": "Select model",
+      "SELECT_MODEL": "Select model",
+      "SUCCESFUL_MESSAGE": "Thank you for your inquiry! We will contact you soon.",
+      "ERROR_MESSAGE": "An error occurred while submitting your request. Please try again later."
     },
     "PRICE_OVERVIEW": {
       "TITLE": "Price",
