--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -27,24 +27,46 @@
       "OPEN_TITLE": "Remolques Abiertos",
       "OPEN_DESC": "Transporta todo tipo de vehículos con el mejor equipo abierto y seguro.",
       "LOCAL_TITLE": "Transporte Local y Almacenamiento",
-      "LOCAL_DESC": "Recogida y entrega garantizadas en Concord, Carolina del Norte & almacenamiento seguro y asequible.",
+      "LOCAL_DESC": "Recogida y entrega garantizadas en Concord, Carolina del Norte & almacenamiento seguro y asequible. Servicio de montacargas o forklift disponible",
       "BOOK_NOW": "Reservar ahora"
     },
     "QUOTE_FORM": {
-      "TITLE": "Solicita tu cotización",
-      "NAME_LABEL": "Nombre completo",
-      "EMAIL_LABEL": "Correo electrónico",
-      "PHONE_LABEL": "Teléfono",
-      "FROM_LABEL": "Origen",
-      "FROM_PLACEHOLDER": "Escribe el lugar de origen",
-      "TO_LABEL": "Destino",
-      "TO_PLACEHOLDER": "Escribe el lugar de destino",
-      "ENCLOSED_LABEL": "¿Requiere transporte cerrado?",
-      "DATE_LABEL": "Fecha estimada",
-      "PREFERRED_CONTACT_LABEL": "¿Cómo prefieres recibir la cotización?",
+      "TITLE": "Solicita tu Cotización",
+      "NAME_LABEL": "Nombre Completo",
+      "EMAIL_LABEL": "Correo Electrónico",
+      "PHONE_LABEL": "Número de Teléfono",
+      "FROM_LABEL": "Transportar vehículo desde",
+      "FROM_PLACEHOLDER": "Código Postal o Ciudad",
+      "TO_LABEL": "Transportar vehículo hacia",
+      "TO_PLACEHOLDER": "Código Postal o Ciudad",
+      "ENCLOSED_LABEL": "¿Necesitas transporte cerrado?",
+      "DATE_LABEL": "Fecha Estimada",
+      "PREFERRED_CONTACT_LABEL": "¿Cómo deseas recibir la cotización?",
       "PREFERRED_CONTACT_PLACEHOLDER": "Selecciona una o más opciones",
-      "DESCRIPTION_LABEL": "Comentarios adicionales",
-      "SUBMIT_BUTTON": "Enviar cotización"
+      "DESCRIPTION_LABEL": "Comentarios Adicionales",
+      "SUBMIT_BUTTON": "Enviar Cotización",
+      "VEHICLE": "Vehículo",
+      "DESTINATION": "Destino",
+      "CONTACT_DETAILS": "Detalles de Contacto",
+      "NEXT": "Siguiente",
+      "PREVIOUS": "Anterior",
+      "YES": "Si",
+      "NO": "No",
+      "IS_OPERABLE": "Es operable?",
+      "VEHICLE_YEAR": "Año del vehículo",
+      "VEHICLE_MAKE": "Marca del vehículo",
+      "VEHICLE_MODEL": "Modelo del vehículo",
+      "TRANSPORT_TYPE": "Tipo de transporte",
+      "TRANSPORT_TYPE_PLACEHOLDER": "Selecciona el tipo de transporte",
+      "OTHER": "Otro",
+      "OTHER_MAKE_LABEL": "Selecciona la marca",
+      "OTHER_MODEL_LABEL": "Selecciona el modelo",
+      "SELECT_MAKE": "Selecciona la marca",
+      "OTHER_MAKE_PLACEHOLDER": "Selecciona la marca",
+      "OTHER_MODEL_PLACEHOLDER": "Selecciona el modelo",
+      "SELECT_MODEL": "Selecciona el modelo",
+      "SUCCESFUL_MESSAGE": "¡Gracias por tu consulta! Nos pondremos en contacto contigo pronto.",
+      "ERROR_MESSAGE": "Ocurrió un error al enviar tu consulta. Por favor, intenta nuevamente más tarde."
     },
     "PRICE_OVERVIEW": {
       "TITLE": "Precio",
