change in translations

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -96,7 +96,7 @@
         },
         "NO_ADVANCE": {
           "TITLE": "No Advance Payment",
-          "DESCRIPTION": "That's right! We don't charge anything upfront. You only pay when your vehicle has been safely delivered."
+          "DESCRIPTION": "That's right! We don't ask for anything upfront. You only pay a portion of the fee when we pick up your car, and the rest is settled once your vehicle is safely delivered. It's that simple and hassle-free!"
         },
         "INSURANCE": {
           "TITLE": "Insurance Coverage",
