--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -95,7 +95,7 @@
         },
         "NO_ADVANCE": {
           "TITLE": "Sin pago anticipado",
-          "DESCRIPTION": "¡Así es! No cobramos nada por adelantado. Solo realizas el pago cuando tu vehículo ha sido entregado de forma segura."
+          "DESCRIPTION": "¡Así es! No pedimos nada por adelantado. Solo pagas una parte de la tarifa al recoger tu coche y el resto se liquida una vez que lo entregamos de forma segura. ¡Así de simple y sin complicaciones!"
         },
         "INSURANCE": {
           "TITLE": "Protección asegurada",
